--- a/css/style.css
+++ b/css/style.css
@@ -470,6 +470,58 @@ body {
 	line-height: 30px;
 	letter-spacing: -0.03em;
 }
+.modal-sub_three {
+	opacity: 0;
+	visibility: hidden;
+	position: fixed;
+	bottom: 40px;
+    right: 63px;
+	z-index: 1000;
+	background-image: url(../img/Subtract3.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 579px;
+	height: 591px;
+	padding: 40px 38px;
+	transition: .4s;
+	
+}
+.left {
+	padding-top: 14px;
+	cursor: pointer;
+}
+.modal-sub_three-top {
+	display: flex;
+	gap: 24px;
+	align-items: start;
+}
+
+.modal-sub_three-bot-tops {
+	display: flex;
+	gap: 16px;
+	align-items: center;
+	margin-bottom: 16px;
+
+}
+.btn-bots {
+	margin-top: 8px;
+}
+.modal-sub_three-bot-tops button{
+	border: 1px solid #DCDCDC;
+	font-family: "Roboto";
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: -0.03em;
+	text-align: left;
+	color: #A8A8A8;
+	padding: 16px 24px;
+	border-radius: 50px;
+}
+.modal-three-btn--active {
+	border: none!important;
+	color:#003EBB!important;
+}
 .modal-sub--active {
 	opacity: 1;
 	visibility: visible;
@@ -480,6 +532,15 @@ body {
 	gap: 40px;
 	margin-bottom: 40px;
 }
+.label-inputs {
+	display: flex;
+	flex-direction: column;
+}
+.label-inputs label{
+	color: #A8A8A8;
+	font-family: "Roboto";
+	line-height: 30px;
+}
 .modal-sub_btns-two {
 	display: flex;
 	flex-direction: column;
@@ -487,7 +548,7 @@ body {
 	max-width: 226px;
 }
 .modal-sub_two-input {
-	height: 62px;
+	height: 31px;
 	border-bottom: 1px solid #DCDCDC;
 }
 .modal-sub_btn-two {
@@ -733,11 +794,24 @@ body {
 	transition: all 1.8s;
 	transform: translateX(0%);
 }
+.Public_rigth.element-animation {
+	opacity: 0;
+	transform: translateX(0%);
+	
+}
+.Public_rigth.element-animation.element-show {
+	opacity: 1;
+	transform: translateX(0%);
+	
+
+}
 /* ///////////ANIMATION//////////// */
 /* ///////////Public//////////// */
 .Public {
 	padding-left: 63px;
 	padding-bottom: 160px;
+	display: flex;
+	gap: 24px;
 }
 .Public_left-all {
 	display: flex;
@@ -748,7 +822,7 @@ body {
 .Public_left-item {
 	display: flex;
 	justify-content: space-between;
-	max-width: 582px;
+	width: 582px;
 	border-bottom: 1px solid #DCDCDC;
 	padding: 0px 0px 24px 0px;
 	cursor: pointer;
@@ -767,6 +841,53 @@ body {
 	letter-spacing: 0em;
 	border-radius: 4px;
 
+}
+.swiper-slide-two {
+	border-radius: 16px;
+	padding: 16px;
+	border: 1px solid #DCDCDC;
+	background-color: #F8F8F8;
+	max-width: 378px;
+	width: 100%;
+}
+.swiper-slide-two img{
+	padding-bottom: 24px;
+}
+.swiper-slide-two p{
+	padding-top: 10px;
+	font-family: "Roboto";
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: -0.03em;
+	text-align: left;
+
+}
+.swiper-slide-two-bot {
+	padding-top: 24px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.swiper-slide-two-bot a{
+	border: 1px solid #DCDCDC;
+	background-color: #fff;
+	padding: 16px 24px;
+	font-family: "Roboto";
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: -0.03em;
+	color: #000;
+	border-radius: 50px;
+	transition: .3s;
+}
+.swiper-slide-two-bot a:hover {
+	background-color: #003EBB;
+	color: white;
+}
+.swiper-slide-two-bot img {
+	padding-bottom: 0;
 }
 /* ///////////Public//////////// */
 /* ///////////Reviews//////////// */
